# wikiViz

./: .gitignore  CLAUDE.md  LICENSE  Notes-Other.txt  README.md  error log 3dec2022.rtf  example.html  main.py  pyproject.toml  requirements.txt  run_logs.txt  test2.xlsx  test6.xlsx  test9.xlsx  wikiviz.ipynb
.ipynb_checkpoints/: scrap_wiki_scraper-checkpoint.ipynb  wikiviz-checkpoint.ipynb
.spyproject/config/backups/: workspace.ini.bak
_archive/front-end-implementation/: app_run_logs.txt  wikiviz-app.py
_archive/reference/: Notes-Other.txt
_archive/test result files/: test5.xlsx  test8.xlsx
docs/superpowers/plans/: 2026-03-23-formalize-repo.md
docs/superpowers/specs/: 2026-03-23-formalize-repo-design.md
front end implementation/: app_run_logs.txt  main-wikiViz.py  requirements.txt  wikiviz-app.py
front-end-implementation/: streamlit-commands.txt  wikiviz-app.py  wikiviz-main.py
notebooks/: scrap_wiki_scraper.ipynb
reference/: reflections.txt
test result files/: test.xlsx  test3.xlsx  test4.xlsx  test7.xlsx
tests/: test_cache.py  test_core.py
wikiviz/: __init__.py  app.py  cache.py  core.py
